--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - ./.env.dev
     depends_on:
       - db
+    stdin_open: true
+    tty: true
   db:
     image: postgres:12.0-alpine
     volumes:
