--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,6 +6,7 @@ Django==3.0.7
 django-appconf==1.0.4
 django-filter==2.3.0
 django-post-office==3.4.1
+django-taggit==1.3.0
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 future==0.18.2
