--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -9,6 +9,7 @@ django-post-office==3.4.1
 django-taggit==1.3.0
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
+drf-extensions==0.6.0
 future==0.18.2
 gunicorn==20.0.4
 jsonfield==3.1.0
