--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -8,6 +8,7 @@ django-filter==2.3.0
 django-post-office==3.4.1
 django-taggit==1.3.0
 djangorestframework==3.11.0
+djangorestframework-filters==1.0.0.dev0
 djangorestframework-jwt==1.11.0
 drf-extensions==0.6.0
 future==0.18.2
