--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,26 +1,50 @@
+aioredis==1.3.1
 amqp==2.6.0
 asgiref==3.2.10
+async-timeout==3.0.1
+attrs==19.3.0
+autobahn==20.7.1
+Automat==20.2.0
 autopep8==1.5.3
 billiard==3.6.3.0
+cffi==1.14.0
+channels==2.4.0
+channels-redis==3.0.1
+constantly==15.1.0
+cryptography==3.0
+daphne==2.5.0
 Django==3.0.7
 django-appconf==1.0.4
 django-filter==2.3.0
-django-post-office==3.4.1
 django-taggit==1.3.0
 djangorestframework==3.11.0
 djangorestframework-filters==1.0.0.dev0
 djangorestframework-jwt==1.11.0
 drf-extensions==0.6.0
-future==0.18.2
 gunicorn==20.0.4
-jsonfield==3.1.0
+hiredis==1.1.0
+hyperlink==19.0.0
+idna==2.10
+importlib-metadata==1.7.0
+incremental==17.5.0
 kombu==4.6.11
 Markdown==3.2.2
+msgpack==1.0.0
 psycopg2-binary==2.8.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.6.0
+pycparser==2.20
+PyHamcrest==2.0.2
 PyJWT==1.7.1
+pyOpenSSL==19.1.0
 pytz==2020.1
+redis==3.5.3
+service-identity==18.1.0
 six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
+txaio==20.4.1
 vine==1.3.0
+zipp==3.1.0
+zope.interface==5.1.0
