Configure containarized deployment to AWS

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,5 @@
-upstream gossips_book {
-    server web:8000;
+upstream api {
+    server api:8000;
 }
 
 server {
@@ -7,13 +7,13 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://gossips_book;
+        proxy_pass http://api;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
-    location /staticfiles/ {
+    location /staticfiles {
         alias /home/app/web/staticfiles/;
     }
 
