--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,39 @@ version: "3.3"
 
 services:
   web:
-    build: ./app
-    command: python manage.py runserver 0.0.0.0:8000
+    build:
+      context: ./app
+      dockerfile: Dockerfile.prod
+    command: gunicorn gossips_book.routing:application --bind 0.0.0.0:8000
     volumes:
       - ./app/:/usr/src/app/
-    ports:
-      - 8000:8000
+      - static_volume:/home/app/web/staticfiles
+    expose:
+      - 8000
     env_file:
-      - ./.env.dev
+      - ./.env.prod
     depends_on:
       - db
       - redis
     links:
       - redis:redis
-    stdin_open: true
-    tty: true
     environment:
       - REDIS_HOST=redis
+      - DJANGO_SETTINGS_MODULE=gossips_book.settings
   db:
     image: postgres:12.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=gossips_book
-      - POSTGRES_PASSWORD=gossips_book
-      - POSTGRES_DB=gossips_book_dev
+    env_file:
+      - ./.env.prod.db
+  nginx:
+    build: ./nginx
+    volumes:
+      - static_volume:/home/app/web/staticfiles
+    ports:
+      - "1337:80"
+    depends_on:
+      - web
   redis:
     image: redis:latest
     command: redis-server
@@ -36,17 +44,8 @@ services:
     volumes:
       - redis-data:/var/lib/redis
       - redis.conf:/usr/local/etc/redis.conf
-  nginx:
-    build: ./nginx
-    volumes:
-      - static_volume:/home/app/web/staticfiles
-    ports:
-      - 1337:80
-    depends_on:
-      - web
-
 volumes:
   postgres_data:
+  static_volume:
   redis-data:
   redis.conf:
-  static_volume:
