AWS deployment configurations
- reconfigure docker
- reconfigure nginx

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,10 +1,6 @@
-# Pull official base image
-FROM python:3.8.5-alpine
-# set work directory
+FROM python:3.8.5-alpine as builder
 
 WORKDIR /usr/src/app
-
-# set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
@@ -12,12 +8,38 @@ ENV PYTHONUNBUFFERED 1
 RUN apk update \
     && apk add postgresql-dev gcc python3-dev musl-dev
 RUN apk add --no-cache libressl-dev libffi-dev
-# Install dependencies
-# RUN pip install --upgrade  pip
+
 RUN pip install --upgrade pip
 COPY ./requirements.txt .
-RUN pip install -r requirements.txt
-# RUN pip install flake8
-# copy project
+RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
 COPY . .
-ENTRYPOINT [ "/usr/src/app/entrypoint.sh" ]
+
+
+
+
+FROM python:3.8.5-alpine
+
+RUN mkdir -p /home/app
+
+RUN addgroup -S app && adduser -S app -G app
+ENV HOME=/home/app
+ENV APP_HOME=/home/app/api
+RUN mkdir -p $APP_HOME
+RUN mkdir -p $APP_HOME
+RUN mkdir -p $APP_HOME/staticfiles
+RUN mkdir -p $APP_HOME/mediafiles
+
+WORKDIR $APP_HOME
+
+RUN apk update && apk add libpq
+COPY --from=builder /usr/src/app/wheels /wheels
+COPY --from=builder /usr/src/app/requirements.txt .
+
+RUN pip install --no-cache /wheels/*
+
+COPY ./entrypoint.prod.sh $APP_HOME
+
+COPY . $APP_HOME
+RUN chown -R app:app $APP_HOME
+
+ENTRYPOINT [ "/home/app/api/entrypoint.prod.sh" ]
