--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   db:
-    image: "postgres:12.0-alpine"
+    image: "postgres:latest"
     environment:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=gossip_book
