--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,20 +1,46 @@
-upstream api {
-    server api:8000;
+upstream wsgi_api {
+    server wsgi_api:8000;
+}
+
+upstream asgi_api {
+    server asgi_api:5000;
 }
 
 server {
 
     listen 80;
 
-    location / {
-        proxy_pass http://api;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    location /ws {
+        try_files $uri @proxy_to_app;
+    }
+
+    location @proxy_to_app {
+        proxy_pass http://asgi_api;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_redirect off;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+    }
+
+
+    location / {
+        proxy_pass http://wsgi_api;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
         proxy_redirect off;
     }
 
-    location /staticfiles {
-        alias /home/app/web/staticfiles/;
+    location /staticfiles/ {
+        alias /home/app/api/staticfiles/;
     }
-
+    location /mediafiles/ {
+        alias /home/app/api/staticfiles/;
+    }
 }
