--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "venv/bin/python3"
+    "python.pythonPath": "/home/mwibutsa/Desktop/projects/gossip_venv/bin/python3"
 }
