--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,33 +3,23 @@ version: "3.7"
 services:
   db:
     image: postgres:latest
-
-    environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=gossip_book
-      - POSTGRES_DB=gossip_book
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env.prod.db
   api:
     build: ./app
-    command: sh -c "python manage.py makemigrations && python manage.py migrate && daphne gossips_book.asgi:application -b 0.0.0.0 -p 8000"
+    command: "daphne gossips_book.asgi:application -b 0.0.0.0 -p 8000"
     volumes:
       - static_volume:/home/app/api/staticfiles
       - media_volume:/home/app/api/mediafiles
     expose:
       - 8000
-    restart: always
     depends_on:
       - db
       - redis-server
-    environment:
-      - SECRET_KEY=sec32key
-      - PG_DATABASE=gossip_book
-      - PG_USER=gossip_book
-      - PG_PASSWORD=password
-      - PG_HOST=db
-      - PG_PORT=5432
-      - REDIS_HOST=redis-server
-      - REDIS_PORT=6379
-      - SITE_ID=1
+    env_file:
+      - ./.env.prod
   nginx:
     restart: always
     build: ./nginx
@@ -46,3 +36,4 @@ services:
 volumes:
   static_volume:
   media_volume:
+  postgres_data:
