--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,12 @@ server {
     }
 
     location /staticfiles {
-        alias /home/app/web/staticfiles/;
+        alias /usr/src/app/api/staticfiles/;
+    }
+
+
+    location /mediafiles/ {
+        alias /usr/src/app/api/mediafiles/;
     }
 
 }
