--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,45 @@
 version: "3.7"
 
 services:
-  wsgi_api:
+  db:
+    image: postgres:latest
+
+    environment:
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_USER=gossip_book
+      - POSTGRES_DB=gossip_book
+  api:
     build: ./app
-    command: sh -c "gunicorn gossips_book.wsgi:application --bind 0.0.0.0:8000"
+    command: sh -c "python manage.py makemigrations && python manage.py migrate && daphne gossips_book.asgi:application -b 0.0.0.0 -p 8000"
     volumes:
       - static_volume:/home/app/api/staticfiles
       - media_volume:/home/app/api/mediafiles
     expose:
       - 8000
-    env_file:
-      - ./.env.prod
+    restart: always
     depends_on:
       - db
-    stdin_open: true
-    tty: true
-  asgi_api:
-    build: ./app
-    command: daphne gossips_book.asgi:application -b 0.0.0.0 -p 5000
-    expose:
-      - 5000
-    depends_on:
-      - db
-      - wsgi_api
       - redis-server
-    env_file:
-      - ./.env.prod
-    stdin_open: true
-    tty: true
-  db:
-    image: postgres:latest
     environment:
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=gossip_book
-      - POSTGRES_DB=gossip_book
+      - SECRET_KEY=sec32key
+      - PG_DATABASE=gossip_book
+      - PG_USER=gossip_book
+      - PG_PASSWORD=password
+      - PG_HOST=db
+      - PG_PORT=5432
+      - REDIS_HOST=redis-server
+      - REDIS_PORT=6379
+      - SITE_ID=1
   nginx:
     restart: always
     build: ./nginx
     volumes:
       - static_volume:/home/app/api/staticfiles
+      - media_volume:/home/app/api/mediafiles
     ports:
-      - "1337:80"
+      - "8080:80"
     depends_on:
-      - asgi_api
-      - wsgi_api
+      - api
   redis-server:
     image: "redis:latest"
 
